--- a/core/src/main/resources/com/shatteredpixel/shatteredpixeldungeon/messages/items/items.properties
+++ b/core/src/main/resources/com/shatteredpixel/shatteredpixeldungeon/messages/items/items.properties
@@ -1398,6 +1398,9 @@ items.weapon.melee.magesstaff.desc=Crafted by the Mage himself, this staff is a 
 items.weapon.melee.magesstaff.no_wand=The staff currently has no magic in it, it must be _imbued with a wand's power_ before it can be used to cast spells.
 items.weapon.melee.magesstaff.has_wand=The staff is currently imbued with a _%s._
 
+items.weapon.melee.mastersword.name=mastersword
+items.weapon.melee.mastersword.desc=Link's legendary sword with great power.
+
 items.weapon.melee.meleeweapon.stats_known=This _tier-%1$d_ melee weapon deals _%2$d-%3$d damage_ and requires _%4$d strength_ to use properly.
 items.weapon.melee.meleeweapon.stats_unknown=Typically this _tier-%1$d_ melee weapon deals _%2$d-%3$d damage_ and requires _%4$d strength_ to use properly.
 items.weapon.melee.meleeweapon.probably_too_heavy=Probably this weapon is too heavy for you.
