start creating link

--- a/core/src/main/resources/com/shatteredpixel/shatteredpixeldungeon/messages/actors/actors.properties
+++ b/core/src/main/resources/com/shatteredpixel/shatteredpixeldungeon/messages/actors/actors.properties
@@ -340,6 +340,12 @@ actors.hero.heroclass.huntress_desc_loadout=The Huntress starts with a pair of _
 actors.hero.heroclass.huntress_desc_misc=The Huntress can travel through tall grass without trampling it.\n\nThe Huntress can use thrown weapons for longer before they break.\n\nThe Huntress senses nearby enemies even if they are hidden behind obstacles.\n\nThe Huntress automatically identifies:\n- Scrolls of Identify\n- Potions of Mind Vision\n- Scrolls of Lullaby
 actors.hero.heroclass.huntress_desc_subclasses=A subclass can be chosen after defeating the second boss. The Huntress has two subclasses:
 
+actors.hero.heroclass.link=link
+actors.hero.heroclass.link_desc_item=Link starts with a _unique broken seal,_ which he can affix to armor.\n\nHe will slowly generate shielding over his health while he is wearing armor with the seal affixed.\n\nThe seal can be moved between armor, carrying a single upgrade with it.
+actors.hero.heroclass.link_desc_loadout=Link starts with a _worn shortsword,_ which offers more direct damage than other starter weapons.\n\nLink starts with _three throwing knives,_ which offer some ranged damage and deal more damage to surprised enemies.\n\nLink starts with a _magical holster,_ which can store various magic items.
+actors.hero.heroclass.link_desc_misc=Link regains a small amount of HP whenever he eats food.\n\nLink automatically identifies:\n- Scrolls of Identify\n- Potions of Healing\n- Scrolls of Rage
+actors.hero.heroclass.link_desc_subclasses=A subclass can be chosen after defeating the second boss. Link has two subclasses:
+
 actors.hero.herosubclass.gladiator=gladiator
 actors.hero.herosubclass.gladiator_desc=A successful attack with a melee weapon allows the _Gladiator_ to start a combo. Building combo allows him to use unique finisher moves.
 actors.hero.herosubclass.berserker=berserker
